Avance en correccion de errores #2