@@ -1,34 +1,36 @@
 package edu.sena.petcare.mapper;
 
+import org.springframework.stereotype.Component;
 import edu.sena.petcare.dto.wishlist.WishlistReadDTO;
 import edu.sena.petcare.models.Product;
 import edu.sena.petcare.models.Wishlist;
-import org.mapstruct.Mapper;
-import org.mapstruct.Mapping;
-import org.mapstruct.Mappings;
-
+import edu.sena.petcare.utility.ListaMappeo;
+import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Mapper(componentModel = "spring")
-public interface WishlistMapper {
+@Component
+public class WishlistMapper {
 
-    // --- De Entidad a DTO ---
-
-    @Mappings({
-            @Mapping(source = "user.id", target = "userId"),
-            @Mapping(target = "productIds", expression = "java(mapProductsToProductIds(wishlist.getProducts()))")
-    })
-    WishlistReadDTO toReadDTO(Wishlist wishlist);
-
-    // Método auxiliar para mapear la lista de entidades Product a IDs
-    default List<Long> mapProductsToProductIds(List<Product> products) {
-        if (products == null) {
-            return java.util.Collections.emptyList();
+    public WishlistReadDTO toDto(Wishlist entity) {
+        if (entity == null) {
+            return null;
         }
-        return products.stream()
-                .map(Product::getId)
-                .collect(Collectors.toList());
+        WishlistReadDTO dto = new WishlistReadDTO();
+        dto.setId(entity.getId());
+        dto.setCreateDate(entity.getCreateDate() != null ? entity.getCreateDate().toString() : null);
+        dto.setUserId(entity.getUser() != null ? entity.getUser().getId() : null);
+
+        List<Long> productIds = entity.getProducts() == null
+                ? Collections.emptyList()
+                : entity.getProducts().stream()
+                        .map(Product::getId)
+                        .toList();
+        dto.setProductIds(productIds);
+
+        return dto;
     }
 
+    public List<WishlistReadDTO> toDtoList(List<Wishlist> entities) {
+        return ListaMappeo.toDtoList(entities, this::toDto);
+    }
 }
